完成修复